# open-inference-runtime

./: .gitignore  Cargo.toml  run_triton.sh
model/: inference_input.json
src/: client.rs  lib.rs  main.rs  models.rs  tests.rs  tokenizer.rs  websocket_server.rs
