[package]
name = "open-inference-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
zip = "0.6"
image = "0.24"
csv = "1.1"
base64 = "0.21"
hex = "0.4"
axum = "0.8.4"
prost = "0.12"
prost-types = "0.12"
sha2 = "0.10"         # SHA-256, SHA-512, etc.
tract-onnx = "0.20"
futures = { version = "0.3.28" }
tokio-stream = "0.1.17"
# Web socket Server Dependencies
warp = "0.3"
tokio-tungstenite = "0.20"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
prost-build = "0.12"

